@@ -3,6 +3,8 @@
  - Modified error message for failed login.
    Option '--brief' of command 'approve.pl' now only suppresses
    messages about failed logins, but not other timeouts.
+ - Error message 'Authentication failed' is now also shown for ASA.
+   Previously a timeout message was shown.
 
 3.033     2024-09-06 10:31:32+02:00 Europe/Berlin
 
